package com.medicalapp.patient.entity;

import com.medicalapp.common.entity.BaseEntity;
import jakarta.persistence.*;
import jakarta.validation.constraints.Email;
import jakarta.validation.constraints.NotBlank;
import lombok.Data;
import lombok.EqualsAndHashCode;

@Data
@Entity
@Table(name = "patients")
@EqualsAndHashCode(callSuper = true)
// OOP CONCEPT: INHERITANCE - Patient extends BaseEntity to inherit core database attributes (id, createdAt, updatedAt)
public class Patient extends BaseEntity {

    // OOP CONCEPT: ENCAPSULATION - Private attributes wrapped securely, exposed only via public Getters/Setters generated by Lombok (@Data)
    @NotBlank(message = "Name is required")
    private String name;

    @NotBlank(message = "NIC is required")
    @Column(unique = true)
    private String nic;

    @NotBlank(message = "Phone number is required")
    private String phone;

    @Email(message = "Invalid email format")
    private String email;

    private String address;
    private String bloodGroup;
    private String dateOfBirth;
    private String password;

    @Column(columnDefinition = "TEXT")
    private String medicalHistory;

    @Enumerated(EnumType.STRING)
    private PatientType patientType;

    public enum PatientType {
        OUTPATIENT, INPATIENT
    }
}
